force-app/main/default/objects/Legal_Tracking_Approval__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disapproved</fullName>
            </value>
            <value>
                <fullName>Recused</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>