force-app/main/default/objects/Legal_Tracking_Approval__c/fields/Position_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Date__c</fullName>
    <label>Position Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>