force-app/main/default/objects/Legal_Tracking_Approval__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <referenceTo>Litigation_Tracking__c</referenceTo>
    <relationshipLabel>Legal Tracking Approval</relationshipLabel>
    <relationshipName>Legal_Tracking_Approval</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>